Source/WebCore/bindings/js/JSDOMPromise.h
@@ -90,6 +90,14 @@ inline void DeferredWrapper::reject(const JSC::JSValue& value)
 }
 
 template<>
+inline void DeferredWrapper::reject<ExceptionCode>(const ExceptionCode& ec)
+{
+    JSC::ExecState* exec = m_globalObject->globalExec();
+    JSC::JSLockHolder locker(exec);
+    reject(exec, createDOMException(exec, ec));
+}
+
+template<>
 inline void DeferredWrapper::resolve<String>(const String& result)
 {
     JSC::ExecState* exec = m_globalObject->globalExec();
